# DiC_25S_TU

./: README.md  create_preprocessed_json.py  pyproject.toml  run_pipeline.py
Assignment1/: run_pipeline.py
Assignment1/output/: chi2_output.txt  output.txt  token_counts.txt
Assignment1/src/: category_count.py  final_output.py  preprocessing.py
Assignment2/output/: final_model_results.txt  grid_search_results.csv  output.txt  output_ds.txt  output_rdd.txt
Assignment2/src/: Assignment_2.ipynb  Assignment_2_pt1.ipynb  Assignment_2_pt1_output_comparison.ipynb  Assignment_2_pt2.ipynb
Assignment3/: .gitignore  README.md  requirements.txt
Assignment3/solution/: app.bat  generate_results.py  run_testset.py  run_testset_small.py  setup_resources.py
Assignment3/solution/lambdas/ban_user_check/: handler.py
Assignment3/solution/lambdas/ban_user_check/package/: handler.py
Assignment3/solution/lambdas/chain_pipeline/: handler.py
Assignment3/solution/lambdas/preprocess/: handler.py
Assignment3/solution/lambdas/preprocess/package/: handler.py
Assignment3/solution/lambdas/profanity_check/: handler.py  requirements.txt
Assignment3/solution/lambdas/sentiment_analysis/: handler.py
Assignment3/solution/website/: app.js  index.html
output/: category_counts.txt  chi2_output.txt  merged_chi2_output.txt  output.txt
src/: Ass1_preproc.py  Chicalc.py  Counting.py  category_count.py  chisquared_to_sorted_list.py  create_preprocessed_json.py  final_output.py  preprocessing.py  token_category_count.py  token_count.py  token_counter.py
(+11 files in other folders)
