[project]
name = "dic-25s-tu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awscli>=1.40.41",
    "awscli-local==0.22.0",
    "black==25.1.0",
    "boto3==1.38.23",
    "localstack==4.4.0",
    "mypy-boto3-dynamodb==1.38.0",
    "mypy-boto3-lambda==1.38.0",
    "mypy-boto3-s3==1.38.0",
    "mypy-boto3-sns==1.38.0",
    "mypy-boto3-ssm==1.38.5",
    "pillow==10.0.0",
    "pytest==8.3.5",
    "requests==2.32.3",
]
